<resources>
    <string name="app_name">MemberBerry</string>
    <string name="action_userGuide">Instructions</string>
    <string name="row_layout_date_prefix">Added:  %1$s</string>
    <string name="member_logo">MemberLogo</string>
    <string name="toolbar_title">… member?</string>
    <string name="placeholder_note_body">Note Body</string>
    <string name="placeholder_note_title">Note Title</string>
    <string name="placeholder_item_name">Item Name</string>
    <string name="placeholder_task_description">Task Description</string>
    <string name="placeholder_date_when_added">Date when added</string>
    <string name="header_item_edit">EDIT ITEM</string>
    <string name="hint_name_item_edit">What do you need to buy?</string>
    <string name="alertdialogbutton_cancel">Cancel</string>
    <string name="alertdialogbutton_done">Done</string>
    <string name="header_note_edit">EDIT NOTE</string>
    <string name="hint_title_note_edit">Title</string>
    <string name="hint_body_note_edit">Body</string>
    <string name="edit_taskheader">EDIT TASK</string>
    <string name="hinttaskEdit">What is your task?</string>
    <string name="dateaddededittask">Added:</string>
    <string name="replace_with_a_new_date_from_today">Replace with a new date from today?</string>
</resources>
