<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelCream">

    <TextView
        android:id="@+id/taskEditAlertDialogHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/plum"
        android:fontFamily="@font/snaphand"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/edit_taskheader"
        android:textColor="@color/pastelCream"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/taskEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/komika_text"
        android:hint="@string/hinttaskEdit"
        android:inputType="textCapSentences|textMultiLine"
        android:textColor="@color/plum"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskAlertDialogHeader" />

    <TextView
        android:id="@+id/taskDateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/komika_header"
        android:text="@string/dateaddededittask"
        android:textColor="@color/plum"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskEditText" />

    <TextView
        android:id="@+id/currentTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/komika_text"
        android:text=""
        android:textColor="@color/plum"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/taskDateHeader"
        app:layout_constraintStart_toEndOf="@id/taskDateHeader" />

    <RadioGroup
        android:id="@+id/dateRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDateHeader">

        <RadioButton
            android:id="@+id/newDateRadioBtn"
            style="@style/customRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/replace_with_a_new_date_from_today" />

    </RadioGroup>

    <Button
        android:id="@+id/taskAlertDialogCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@layout/custom_button"
        android:fontFamily="@font/snaphand"
        android:text="@string/alertdialogbutton_cancel"
        android:textColor="@color/pastelCream"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/taskAlertDialogDone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateRadioGroup" />

    <Button
        android:id="@+id/taskAlertDialogDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@layout/custom_button"
        android:fontFamily="@font/snaphand"
        android:text="@string/alertdialogbutton_done"
        android:textColor="@color/pastelCream"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/taskAlertDialogCancel"
        app:layout_constraintTop_toBottomOf="@+id/dateRadioGroup" />

</android.support.constraint.ConstraintLayout>